# just-a-copy

Hypixel-PvP-Tracker-master/: README.md  main.py  pyproject.toml
Hypixel-PvP-Tracker-master/cogs/: bedwars.py  config.py  dev_commands.py  duels.py  guild.py  help.py  other.py  server.py  skywars.py  support.py  topgg.py
Hypixel-PvP-Tracker-master/json/: duelsdivtitles.json  dueltitles.json
Hypixel-PvP-Tracker-master/utils/: duels.py
